[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/menus/MenuInGameOpcoes.gd" type="Script" id=1]
[ext_resource path="res://sprites/menus/menuInGame/fundoOpcoes.png" type="Texture" id=2]
[ext_resource path="res://nodes/menus/MenuInGameOpcao.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/objetos/cursorMenuCombate.tscn" type="PackedScene" id=4]

[node name="MenuInGameOpcoes" type="Node2D"]
script = ExtResource( 1 )

[node name="fundo" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="OpcaoStatus" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -150 )

[node name="OpcaoEquipamentos" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -110 )

[node name="OpcaoHabilidades" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -70 )

[node name="OpcaoItens" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -30 )

[node name="OpcaoBestiario" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 10 )

[node name="OpcaoOpcoes" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 50 )

[node name="OpcaoAjuda" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 90 )

[node name="OpcaoSair" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 130 )

[node name="cursor" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.85, 1 )
